...
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="ALL TASKS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MainActivityBtnAddTask"
        app:layout_constraintStart_toEndOf="@+id/MainActivityBtnSignIn" />

    <TextView
        android:id="@+id/MainActivityTextViewMyTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
    <Button
        android:id="@+id/MainActivityBtnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="ADD TASK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/MainActivityImgBtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="27dp"
        android:contentDescription="Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <TextView
        android:id="@+id/MainActivityTextViewUsernameTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTextViewMyTasks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityRecyclerViewTaskList"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTextViewUsernameTasks" />
...
